# devops-green-agent

./: .gitignore  Dockerfile  Dockerfile.claude  Dockerfile.nop  Dockerfile.oracle  README.md  agentbeat_tutorial.md  batch_run_tasks.py  docker-compose.yml  example_purple_agent.py  leaderboard_README.md  main.py  pyproject.toml  run_evaluation.md  scenario.toml  server.py  start_claude_code_agent.py  start_containerd_task.py  start_nop_agent.py  start_oracle_agent.py  submit_to_agentbeats.py  test_batch_eval.py  test_log_containerd__containerd-4847_20260214_011450.txt  test_log_containerd__containerd-4847_20260214_012835.txt
.github/workflows/: publish-purple-agents.yml  publish.yml
amber/: README.md  amber-manifest-claude-code.json5  amber-manifest-green.json5  amber-manifest-purple.json5  amber-scenario.json5  sample.env
dataset_subset/build_bugfix__huanghongxun-hmcl-49482653475/: task.yaml
dataset_subset/build_bugfix__janusgraph-janusgraph-50853495264/: task.yaml
dataset_subset/build_bugfix__tananaev-traccar-44795314278/: run-tests.sh  task.yaml
dataset_subset/elastic__logstash-13902/: run-tests.sh
leaderboard/: README.md  query.sql
src/: agent.py  dataset_manager.py  docker_manager.py  messenger.py  server.py
src/green_agent/: __init__.py  agent.py
src/purple_agent/: __init__.py  agent.py  claude_code_agent.py  nop_agent.py  oracle_agent.py
src/util/: __init__.py  a2a_helper.py
tests/: conftest.py  test_agent.py
